--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^7.5.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
