--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_CONNECTION = 'mongodb://0.0.0.0:27017/touchbrand'
+MONGOSH_URI = 'mongodb://0.0.0.0:27017/touchbrand'
 
 ATLAS_URI = "mongodb+srv://gasal246:kmmldec6@touchbrand.yx8ktga.mongodb.net/?retryWrites=true&w=majority"
 
